make some new pages

--- a/旅客系统/login.html
+++ b/旅客系统/login.html
@@ -33,8 +33,8 @@
 						</div>
 					</div>
 					<div class="ui message error"></div>
-					<button class="ui button submit primary">登录</button>
-					<button class="ui button reset" type="reset">重置</button>
+					<span class="ui button submit primary">密码登陆</span>
+					<span class="ui button reset" type="reset">密钥登录</span>
 				</form>
 				<div class="ui segment basic left aligned">
 					<div class="ui accordion">
