--- a/旅客系统/module/flow/control/flight.html
+++ b/旅客系统/module/flow/control/flight.html
@@ -3,32 +3,32 @@
 
 	<form class="ui small form">
 		<div class="ui grid fields"><!-- stackable doubling-->
-			
-			<div class="doubling two column row">
-				<div class="column">
+
+			<div class="doubling column row">
+				<div class="eight wide column">
 					<div class="field">
 						<label>航班号</label>
 						<input type="text" name="" placeholder="">
 					</div>
 				</div>
-				<div class="column">
+				<div class="eight wide column">
 					<div class="field">
-						<label>航班号</label>
+						<label>联系电话</label>
 						<input type="text" name="" placeholder="">
 					</div>
 				</div>
 			</div>
-			
+
 			<div class="ui divider"></div>
-			
+
 			<div class="doubling column row">
 				<div class="right aligned column">
 					<span class="ui primary button"><i class="plus icon"></i>添加</span>
 				</div>
 			</div>
-			
+
 		</div>
-		
+
 	</form>
 
 
