--- a/旅客系统/module/flow/control/passenger-batch.html
+++ b/旅客系统/module/flow/control/passenger-batch.html
@@ -3,7 +3,7 @@
 
 	<form class="ui small form">
 		<div class="ui grid fields"><!-- stackable doubling-->
-			
+
 			<div class="column row">
 				<div class="column">
 					<div class="field">
@@ -12,18 +12,18 @@
 					</div>
 				</div>
 			</div>
-			
+
 			<div class="ui divider"></div>
-			
+
 			<div class="doubling column row">
 				<div class="right aligned column">
 					<span class="ui primary button"><i class="reply icon"></i>导入</span>
-					<span class="ui button"><i class="download icon"></i>下载模板</span>
+					<span class="ui red button"><i class="download icon"></i>下载模板</span>
 				</div>
 			</div>
-			
+
 		</div>
-		
+
 	</form>
 
 
