--- a/旅客系统/module/flow/control/passenger-single.html
+++ b/旅客系统/module/flow/control/passenger-single.html
@@ -21,7 +21,7 @@
 						<label>性别</label>
 						<select class="ui compact dropdown">
 							<option>未知</option>
-							<option>男</option>
+							<option value="">男</option>
 							<option>女</option>
 						</select>
 					</div>
@@ -68,14 +68,14 @@
 					</div>
 				</div>
 			</div>
-			
+
 			<div class="ui divider"></div>
-			
+
 			<div class="doubling column row">
 				<div class="column">
 					<div class="field">
 						<label>布控原因</label>
-						<textarea type="text" name="" placeholder=""></textarea>
+						<textarea rows="4" type="text" name="" placeholder=""></textarea>
 					</div>
 				</div>
 			</div>
@@ -91,9 +91,9 @@
 					</div>
 				</div>
 			</div>
-			
+
 			<div class="ui divider"></div>
-			
+
 			<div class="doubling two column row">
 				<div class="column">
 					<div class="field">
@@ -142,9 +142,9 @@
 					</div>
 				</div>
 			</div>
-			
+
 			<div class="ui divider"></div>
-			
+
 			<div class="doubling four column row">
 				<div class="column">
 					<div class="field">
@@ -165,29 +165,29 @@
 					</div>
 				</div>
 			</div>
-			
+
 			<div class="ui divider"></div>
-			
+
 			<div class="doubling column row">
 				<div class="column">
 					<div class="field">
-						<label>布局</label>
-						<textarea type="text" name="" placeholder=""></textarea>
+						<label>备注</label>
+						<textarea rows="4" type="text" name="" placeholder=""></textarea>
 					</div>
 				</div>
 			</div>
-			
+
 			<div class="ui divider"></div>
-			
+
 			<div class="doubling column row">
 				<div class="right aligned column">
 					<button class="ui primary button" type="submit"><i class="plus icon"></i>添加</button>
 					<button class="ui button" type="reset"><i class="undo icon"></i>重置</button>
 				</div>
 			</div>
-			
+
 		</div>
-		
+
 	</form>
 
 
