--- a/旅客系统/module/maintain/report.html
+++ b/旅客系统/module/maintain/report.html
@@ -2,7 +2,7 @@
 <div id="form-search" class="ui secondary segment clearing">
 	<form class="ui small form">
 		<div class="ui grid fields">
-			<div class="stackable doubling three column row">
+			<div class="stackable three column row">
 				<div class="column">
 					<div class="field">
 						<label>名称</label>
@@ -30,7 +30,7 @@
 			</div>
 			<div class="column row">
 				<div class="right aligned column">
-					<span class="ui primary button">搜索</span>
+					<span class="ui primary button"><i class="search icon"></i>搜索</span>
 				</div>
 			</div>
 		</div>
@@ -230,14 +230,11 @@
 			<p>　　当月系统累计登录3000人次，平均每天100人次，其登录高峰期出现在3月10号，当天总计登录240人次。</p>
 			<p>　　当月系统备份策略运行正常，完成1次全库备份，4次增量备份，系统总体运行稳定，达到预期运维目标。</p>
 			<p>　　本月总共受理各类服务35次，其中处理硬件问题3次，软件故障2次，网络问题0次，辅助数据统计15次，解答用户使用问题10次，辅助布控5次。</p>
-			<h3>本月频次较高的故障</h3>
-			<h3>下月系统运维工作重点</h3>
 		</div>
 		<div class="ui right aligned basic segment">提交日期：2015年4月1日</div>
 	</div>
 	<div class="actions">
-		<span class="ui button primary"><i class="print icon"></i>打印</span>
-		<span class="ui button red"><i class="download icon"></i>下载</span>
+		<span class="ui button red"><i class="file pdf outline icon"></i>下载</span>
 		<span class="ui button deny">关闭</span>
 	</div>
 </div>
