--- a/旅客系统/module/statistic/passenger-chart.html
+++ b/旅客系统/module/statistic/passenger-chart.html
@@ -1,10 +1,3 @@
-<div id="labels-search" class="ui large labels ui-tabs">
-	<b>可选查询：</b>
-	<a href="#" class="ui label blue bottom pointing">年图表</a>
-	<a href="#" class="ui label">月图表</a>
-	<a href="#" class="ui label">周图表</a>
-	<a href="#" class="ui label">日图表</a>
-</div>
 
 <div id="form-search" class="ui secondary segment clearing">
 	<form class="ui small form">
@@ -26,6 +19,17 @@
 							<input class="ui-datapicker" type="text">
 							<i class="calendar icon"></i>
 						</div>
+					</div>
+				</div>
+				<div class="column">
+					<div class="field">
+						<label>周期</label>
+						<select class="ui compact dropdown">
+							<option value="year">年</option>
+							<option value="month">月</option>
+							<option value="week">周</option>
+							<option value="day">日</option>
+						</select>
 					</div>
 				</div>
 			</div>
@@ -98,7 +102,7 @@
 			</div>
 		</div>
 	</div>
-	
+
 </div>
 <div class="ui bottom attached right aligned segment">
 	<span class="ui red button"><i class="download icon"></i>下载</span>
