--- a/旅客系统/module/info/warning.html
+++ b/旅客系统/module/info/warning.html
@@ -1,48 +1,105 @@
 
 <div id="labels-search" class="ui large labels ui-tabs">
 	<b>可选查询：</b>
-	<a href="#" class="ui label blue bottom pointing">默认</a>
-	<a href="#" class="ui label">姓名、证件号码</a>
-	<a href="#" class="ui label">办案人员</a>
-	<a href="#" class="ui label">布控类型</a>
+	<a href="#" class="ui label blue bottom pointing">姓名、证件号码</a>
+	<a href="#" class="ui label">全字段</a>
 </div>
 
 <div id="form-search" class="ui secondary segment clearing">
 	<form class="ui small form">
 		<div class="ui grid fields">
-			<div class="stackable doubling four column row">
+			<div class="stackable doubling three column row">
 				<div class="column">
 					<div class="field">
-						<label>字段</label>
+						<label>姓名</label>
 						<input type="text" name="" placeholder="">
 					</div>
 				</div>
 				<div class="column">
 					<div class="field">
-						<label>字段</label>
+						<label>证件号</label>
 						<input type="text" name="" placeholder="">
 					</div>
 				</div>
 				<div class="column">
 					<div class="field">
-						<label>字段</label>
+						<label>预警时间</label>
+						<div class="ui icon input">
+							<input class="ui-datapicker" type="text">
+							<i class="calendar icon"></i>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="ui divider"></div>
+			<div class="column row">
+				<div class="right aligned column">
+					<span class="ui primary button"><i class="search icon"></i>搜索</span>
+				</div>
+			</div>
+		</div>
+	</form>
+	<form class="ui small form">
+		<div class="ui grid fields">
+			<div class="stackable doubling three column row">
+				<div class="column">
+					<div class="field">
+						<label>姓名</label>
+						<input type="text" name="" placeholder="">
+					</div>
+				</div>
+				<div class="column">
+					<div class="field">
+						<label>证件号</label>
+						<input type="text" name="" placeholder="">
+					</div>
+				</div>
+				<div class="column">
+					<div class="field">
+						<label>航班号</label>
+						<input type="text" name="" placeholder="">
+					</div>
+				</div>
+				<div class="column">
+					<div class="field">
+						<label>联系电话</label>
+						<input type="text" name="" placeholder="">
+					</div>
+				</div>
+				<div class="column">
+					<div class="field">
+						<label>来源类型</label>
 						<select class="ui compact dropdown">
-							<option>1</option>
-							<option>2</option>
-							<option>3</option>
+							<option value="">未选</option>
+							<option value="1">1</option>
+							<option value="2">2</option>
 						</select>
 					</div>
 				</div>
 				<div class="column">
 					<div class="field">
-						<label>字段</label>
-						<input type="text" name="" placeholder="">
+						<label>布控级别</label>
+						<select class="ui compact dropdown">
+							<option value="">未选</option>
+							<option value="1">1</option>
+							<option value="2">2</option>
+						</select>
+					</div>
+				</div>
+				<div class="column">
+					<div class="field">
+						<label>预警时间</label>
+						<div class="ui icon input">
+							<input class="ui-datapicker" type="text">
+							<i class="calendar icon"></i>
+						</div>
 					</div>
 				</div>
 			</div>
+			<div class="ui divider"></div>
 			<div class="column row">
 				<div class="right aligned column">
-					<span class="ui primary button">搜索</span>
+					<span class="ui primary button"><i class="search icon"></i>搜索</span>
 				</div>
 			</div>
 		</div>
