--- a/旅客系统/module/flow/control/types.html
+++ b/旅客系统/module/flow/control/types.html
@@ -10,6 +10,7 @@
 					</div>
 				</div>
 			</div>
+			<div class="ui divider"></div>
 			<div class="column row">
 				<div class="right aligned column">
 					<span class="ui primary button"><i class="search icon"></i>搜索</span>
