--- a/旅客系统/sapis/index.html
+++ b/旅客系统/sapis/index.html
@@ -20,7 +20,7 @@
 	</div>
 
 	<!--navigation-->
-	<nav id="leftSide" class="ui left sidebar inverted vertical menu"><!--icon labeled-->
+	<nav id="leftSide" class="ui left sidebar vertical menu"><!--icon labeled inverted-->
 	<!--
 		<div class="item">
 			<span class="ui inverted header">SAPIS 旅客安全信息系统</span>
