--- a/旅客系统/sapis/index.html
+++ b/旅客系统/sapis/index.html
@@ -20,23 +20,7 @@
 	</div>
 
 	<!--navigation-->
-	<nav id="leftSide" class="ui left sidebar vertical menu"><!--icon labeled inverted-->
-	<!--
-		<div class="item">
-			<span class="ui inverted header">SAPIS 旅客安全信息系统</span>
-		</div>
-	-->
-<!--
-	<a href="#" class="item" data-id=""><i class="icon home"></i>首页</a>
-	<a href="#" class="item"><i class="icon home"></i>首页</a>
-	<div class="menu">
-		<a href="#" class="item" data-id=""><i class="icon home"></i>items1</a>
-		<a href="#" class="item" data-id=""><i class="icon home"></i>items2</a>
-		<a href="#" class="item" data-id=""><i class="icon home"></i>items3</a>
-	</div>
--->
-	
-	</nav>
+	<nav id="leftSide" class="ui left sidebar vertical menu"></nav><!--icon labeled inverted-->
 
 	<nav id="top" class="ui top fixed menu">
 		<a id="leftSideTrigger" class="item ui-popup" data-content="收展边栏"><i class="outdent icon"></i></a>
@@ -55,12 +39,7 @@
 				<div class="header">&nbsp;</div>
 				<div class="intro red">&nbsp;</div>
 			</div>
-			<div id="topNavig" class="ui blue secondary pointing center aligned menu"><!--tabular-->
-				<!--
-				<a class="item" href="module/info/deploy-passenger.html">布控旅客查询</a>
-				<a class="item active" href="module/info/deploy-flight.html">布控航班查询</a>
-				-->
-			</div>
+			<div id="topNavig" class="ui blue secondary pointing center aligned menu"></div>
 			<div id="contents"></div>
 		</div>
 	</section>
