--- a/旅客系统/logSystem/index.html
+++ b/旅客系统/logSystem/index.html
@@ -153,7 +153,7 @@
 		</div>
 		<div class="content">
 			<!--kibana chart-->
-			<!--load modules-->
+			<!--modules here-->
 		</div>
 		<div class="actions">
 			<span class="ui button deny">关闭</span>
