--- a/旅客系统/lvkeWeb/module/demo/apis.html
+++ b/旅客系统/lvkeWeb/module/demo/apis.html
@@ -26,4 +26,8 @@
 	</p>
 </div>
 
-
+<div class="ui segment">
+	<h3>Smart Table</h3>
+	<p>table for angular</p>
+	<p><a href="http://lorenzofox3.github.io/smart-table-website/" target="_blank" class="ui blue button">链接</a></p>
+</div>
