--- a/旅客系统/lvkeWeb/login.html
+++ b/旅客系统/lvkeWeb/login.html
@@ -58,9 +58,21 @@
 
 	</div>
 
+<!--
 	<script src="js/lib/requirejs/require.min.js"></script>
 	<script src="js/config.js"></script>
-
+-->
+	<script src="js/lib/angular.1.2.28/angular.min.js"></script>
+	<script src="js/lib/jquery-1.11.2.min.js"></script>
+	<script src="js/lib/jquery.cookie.1.4.1.js"></script>
+	<script src="js/lib/jquery.datetimepicker/jquery.datetimepicker.js"></script>
+	<script src="js/lib/json2.js"></script>
+	<script src="js/lib/semantic-ui/semantic.min.js"></script>
+	<script src="js/lib/smart-table/smart-table.min.js"></script>
+	<script src="js/config.js"></script>
+	<script src="js/common.js"></script>
+	<script src="js/index.js"></script>
+	
 </body>
 
 </html>
